--- a/index.html
+++ b/index.html
@@ -1,14 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LeadiQ</title>
-    <link rel="stylesheet" href="index.css"/>
-    <script src="script.js"></script>
+    <title>Leadiq</title>
+   
 </head>
+
 <body>
-    <div id="cobalt">Project1</div>
+
+    <div class="section-2">
+        <h2>Top sales teams have adopted the LeadIQ way</h2>
+        <div>
+            <div class="box">
+                <img src="https://assets.website-files.com/60819f9be381394642b5659e/60dc798a2a5f2b656ab9f3b1_Clari-01.svg"
+                    alt="" >
+            </div>
+            <div class="box">
+                <img src=" https://assets.website-files.com/60819f9be381394642b5659e/6081ae3578a93f5c114e7b4b_leadiq-logo-showpad.svg"
+                    alt="" >
+            </div>
+            <div class="box">
+                <img src=" https://assets.website-files.com/60819f9be381394642b5659e/60dc7609eda2bf6bb6f87039_walkme-client-logo-03.svg"
+                    alt="" >
+            </div>
+            <div class="box">
+                <img src=" https://assets.website-files.com/60819f9be381394642b5659e/60dc77f3bbee5c4503c22617_Segment-client-logo-04.svg"
+                    alt="" >
+            </div>
+            <div class="box">
+                <img src=" https://assets.website-files.com/60819f9be381394642b5659e/6081ae3556fe8b6d153fa680_leadiq-logo-sitecore.svg"
+                    alt="" >
+            </div>
+            <div class="box">
+                <img src=" https://assets.website-files.com/60819f9be381394642b5659e/6081ae357d19b8697089fb66_leadiq-logo-mulesoft.svg"
+                    alt="" >
+            </div>
+        </div>
+
+
+    </div>
+
+
+
+    <div class="section-3">
+        <h1>Sales teams spend too much time on low value activities.</h1>
+
+
+        <div>
+            <div class="section-3-left">
+                <h2>LeadIQ allows you to:</h2>
+                <div>
+                    <img src="https://assets.website-files.com/60819f9be381394642b5659e/6081b03989e2987115690e4b_leadiq-activities-icon-eliminates.svg"
+                        alt="" class="section-3-left-side-icon1">
+                    <p>Eliminate busy work</p>
+                </div>
+
+                <div>
+                    <img src="https://assets.website-files.com/60819f9be381394642b5659e/6081b0396fa45686e75d2ecc_leadiq-activities-icon-enriches.svg"
+                        alt="" class="section-3-left-side-icon">
+                    <p>Enrich and aggregate your prospect's data</p>
+                </div>
+                <div>
+                    <img src="https://assets.website-files.com/60819f9be381394642b5659e/6081b03925595b6cd5dd0861_leadiq-activities-icon-makes.svg"
+                        alt="" class="section-3-left-side-icon">
+                    <p>Make prioritization and authentic personalization easier</p>
+                </div>
+                <button>Browse Feature</button>
+            </div>
+
+            <div class="section-3-right">
+
+                <div>
+                    <img src="images/section-4-right-side-background-1.png"
+                        alt="" >
+
+                </div>
+
+
+            </div>
+        </div>
+
+
+    </div>
+
+
+<div id="section-4">
+    <div>
+        <div id="section-4-box">
+            <div class="section-4-left-img">
+                <img src="https://assets.website-files.com/60819f9be381394642b5659e/6081b679baa783d764f6fc80_leadiq-image-testimonial-icon.svg"
+                     alt="">
+            </div>
+            <div class="section-4-right">
+                <img src="https://assets.website-files.com/60819f9be381394642b5659e/6081b633c9bc20456cf9deed_leadiq-walkme-logo.svg"
+                     alt="" />
+                    <div class="testimonial-heading">“Without LeadIQ, our outbound team’s workflow would be disjointed and time consuming.”</div>
+                    <div class="autor-testimonial">
+                        <img
+                            src="https://assets.website-files.com/60819f9be381394642b5659e/6081b707a0940538e46fc580_leadiq-autor-image.jpg"
+                             alt="" class="autor-image">
+                        <div class="author-desc">
+                            <div class="autor-name">Aaron Zukoski</div>
+                            <div class="autor-title">Director of Business Development, <span >WalkMe</span></div>
+                        </div>
+                    </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
+
+
 </html>
