--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Center</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="CSS folder/index.css">
 </head>
 <body>
     <div id="privacy-center">
@@ -177,6 +177,6 @@
             <img class="youtubeLogo" src="https://assets.website-files.com/60819f9be381394642b5659e/6081cb4e9e444d3a934f9719_leadiq-social-media-youtube.svg" alt="">
         </div>
     </div>
-   <script src="script.js"></script> 
+   <script src="JAVA SCRIPT/script.js"></script> 
 </body>
 </html>
