--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LeadIq</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="CSS folder/index.css" />
   </head>
   <body>
     <!-- Html for top-navabar -->
@@ -463,6 +463,6 @@
         />
       </div>
     </div>
-    <script src="script.js"></script> 
+    <script src="JAVA SCRIPT/script.js"></script> 
   </body>
 </html>
