adding loginpage and pricing-page with js by Ayush

--- a/privacy.html
+++ b/privacy.html
@@ -13,7 +13,7 @@
         <ul class="top-nav-list">
             <a href="#" class="top-nav-links">Privacy center</a>
             <a href="#" class="top-nav-links">Support</a>
-            <a href="#" class="top-nav-links login-link">
+            <a href="loginPage.html" target="_blank" class="top-nav-links login-link">
                <img src="icon/icons8-lock-50.png" alt="" height="17px
                ">   Login
             </a>
