--- a/features.html
+++ b/features.html
@@ -27,7 +27,7 @@
       </div>
       <div class="main-navbar">
         <div class="main-logo-box">
-          <img src="img/leadiq-logo.svg" alt="" />
+            <a href="../Cobalt/index.html"> <img src="img/leadiq-logo.svg" alt="" /></a> 
         </div>
         <ul class="main-nav-list">
           <li>
