--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="main-navbar">
       <div class="main-logo-box">
-        <img src="img/leadiq-logo.svg" alt="" />
+       <a href="../Cobalt/index.html"> <img src="img/leadiq-logo.svg" alt="" /></a> 
       </div>
       <ul class="main-nav-list">
         <li>
@@ -84,7 +84,7 @@
         <li><a href="#" class="main-nav-links">Pricing</a></li>
       </ul>
       <div class="primary-btn">
-        <a href="" class="primary-btn-link">Get Started</a>
+        <a href="../Cobalt/Get started.html" class="primary-btn-link">Get Started</a>
       </div>
     </div>
 
