--- a/privacy.html
+++ b/privacy.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Center</title>
     <link rel="stylesheet" href="CSS folder/index.css">
+    <link rel="stylesheet" href="CSS folder/privacy.css">
 </head>
 <body>
     <div id="privacy-center">
