fixing feautres page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <li><a href="pricing.html" target="_blank"  class="main-nav-links">Pricing</a></li>
       </ul>
       <div class="primary-btn">
-        <a href="../Cobalt/Get started.html" class="primary-btn-link">Get Started</a>
+        <a href="Get started.html" class="primary-btn-link">Get Started</a>
       </div>
     </div>
 
@@ -474,6 +474,5 @@
         />
       </div>
     </div>
-    <script src="JAVA SCRIPT/script.js"></script> 
   </body>
 </html>
