--- a/pricing.html
+++ b/pricing.html
@@ -8,7 +8,7 @@
   <title>Pricing| LeadIQ</title>
   <link rel="stylesheet" href="CSS folder/pricing.css">
   <link rel="stylesheet" href="CSS folder/index.css">
-  <link rel="stylesheet" href="CSS folder/get started.css">
+  <!-- <link rel="stylesheet" href="CSS folder/get started.css"> -->
 
 </head>
 
@@ -498,8 +498,48 @@
           Optional Add-on
         </div>
       </div>
-    </div>
+      <p class="ptp">
+        FOR ANNUAL PLANS WITH 7 OR MORE USER
+      </p>
+      <h1 class="pth">Optional addons</h1>
 
+      <div class="sec4-card1">
+        <div class="sec4-c1-box">
+                 <div class="sec4-c1-h">
+                   <h1>Starter</h1>
+                   <h1>Pro</h1>
+                   <h1>Enterprises</h1>
+                 </div>
+                 <div class="sec4-c1-btns">
+                   <div class="primary-btn price-btn" id="secondary-btn">
+                     <a href="" class="primary-btn-link">Get Started</a>
+                   </div>
+                   <div class="primary-btn price-btn">
+                     <a href="" class="primary-btn-link">Get Started</a>
+                   </div>
+                   <div class="primary-btn price-btn" id="secondary-btn">
+                     <a href="" class="primary-btn-link">Get Started</a>
+                   </div>
+                 </div>
+               </div>
+               
+             </div>
+             <div class="indianrsdiv">
+              <div class="price-c1">
+                Single sign on (SSO)
+              </div>
+              <div class="price-c2 price-checkbox">
+              </div>
+              <div class="price-c3 price-checkbox">
+               $4800/year
+              </div>
+              <div class="price-c4 price-checkbox">
+                $4800/year
+              </div>
+             </div>
+             
+    </div>
+   
 
   </div>
   <!-- ----------------------------before footer------------------------------------------------ -->
