--- a/Get started.html
+++ b/Get started.html
@@ -44,7 +44,7 @@
               "
             /></a>
             <ul class="whylead-sub submenu">
-              <li><a class="submenu-links" href="../Cobalt/features.html">Features</a></li>
+              <li><a class="submenu-links" href="features.html">Features</a></li>
               <li><a class="submenu-links" href="#">Success stories</a></li>
             </ul>
           </li>
@@ -86,10 +86,10 @@
               </li>
             </ul>
           </li>
-          <li><a href="#" class="main-nav-links">Pricing</a></li>
+          <li><a href="pricing.html" class="main-nav-links">Pricing</a></li>
         </ul>
         <div class="primary-btn">
-          <a href="../Cobalt/Get started.html" class="primary-btn-link">Get Started</a>
+          <a href="Get started.html" class="primary-btn-link">Get Started</a>
         </div>
       </div>
     <!-- section-1 -->
