--- a/features.html
+++ b/features.html
@@ -32,7 +32,7 @@
  
       <div class="main-navbar">
         <div class="main-logo-box">
-            <a href="features.html"> <img src="img/leadiq-logo.svg" alt="" /></a> 
+            <a href="index.html" target="_blank"> <img src="img/leadiq-logo.svg" alt="" /></a> 
         </div>
         <ul class="main-nav-list">
           <li>
@@ -99,12 +99,68 @@
           </li>
         </ul>
       </li>
-      <li><a href="#" class="main-nav-links">Pricing</a></li>
+      <li><a href="pricing.html" class="main-nav-links">Pricing</a></li>
     </ul>
     <div class="primary-btn">
-      <a href="" class="primary-btn-link">Get Started</a>
+      <a href="Get started.html" target="_blank" class="primary-btn-link">Get Started</a>
+    </div>
+    <div class="ham-menu">
+      <div class="ham-line"></div>
+      <div class="ham-line"></div>
+      <div class="ham-line"></div>
     </div>
   </div>
+  <hr>
+  <ul class="main-nav-list" id="ham-list" style="display: none;" >
+    <li>
+      <a href="#" class="main-nav-links">Why LeadIQ
+        <img src="icon/down arrow.png" alt="" height="13px
+          " /></a>
+      <ul class="whylead-sub submenu">
+        <li><a class="submenu-links" href="features.html">Features</a></li>
+        <li><a class="submenu-links" href="#">Success stories</a></li>
+      </ul>
+    </li>
+    <li>
+      <a href="#" class="main-nav-links">Solutions<img src="icon/down arrow.png" alt="" height="13px" /></a>
+      <ul class="submenu" id="solutions-sub">
+        <li><a class="submenu-links" href="#">By Use Case</a></li>
+        <li><a class="submenu-links" href="#">By Role</a></li>
+        <li><a class="submenu-links" href="#">Eliminating Busy Work</a></li>
+        <li><a class="submenu-links" href="#">Sales Leaders</a></li>
+
+        <li><a class="submenu-links" href="#">Strategic Prospecting</a></li>
+        <li><a class="submenu-links" href="#">Revenue Operations</a></li>
+        <li><a class="submenu-links" href="#">Data Accuracy</a></li>
+        <li><a class="submenu-links" href="#">Sales Professionals</a></li>
+      </ul>
+    </li>
+    <li>
+      <a href="#" class="main-nav-links">Resources
+        <img src="icon/down arrow.png" alt="" height="13px
+                  " /></a>
+      <ul class="resource-sub submenu">
+        <li><a class="submenu-links" href="#">Academy</a></li>
+        <li><a class="submenu-links" href="#">Careers</a></li>
+        <li><a class="submenu-links" href="#">Support</a></li>
+        <li>
+          <a class="submenu-links" href="privacy.html">Privacy Center</a>
+        </li>
+      </ul>
+    </li>
+    <li><a href="pricing.html" target="_blank" class="main-nav-links">Pricing</a></li>
+    <li><a href="privacy.html" class="top-nav-links">Privacy center</a></li>
+    <li><a href="#" class="top-nav-links">Support</a></li>
+    <li><a href="loginPage.html" target="_blank" class="top-nav-links login-link">
+      <img src="icon/icons8-lock-50.png" alt="" height="17px
+         " />
+      Login
+    </a>
+  </li>
+  <div class="primary-btn">
+    <a href="Get started.html" class="primary-btn-link">Get Started</a>
+  </div>
+  </ul>
   <!-- ------------SECTION1--------------------------------  -->
   <div class="section-1-features">
     <div class="features-Section1-Bg-Left">
@@ -118,7 +174,7 @@
     <div class="features-Section1-TextPart">
       <h1>Features</h1>
       <p>Focus on the right activities and automate the rest. Learn how LeadIQ optimizes your prospecting workflow.</p>
-      <button class="get-Started">Get started</button>
+      <a href="Get started.html"><button class="get-Started">Get started</button></a>
     </div>
     <hr />
   </div>
@@ -669,7 +725,7 @@
           />
         </div>     
   </div>
-  
+  <script src="JAVA SCRIPT/index.js"></script>
 </body>
 
 </html>
