--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
       </div> -->
       <div class="ham-menu">
         <div class="ham-line"></div>
-    <div class="ham-line"></div>
-    <div class="ham-line"></div>
+        <div class="ham-line"></div>
+        <div class="ham-line"></div>
       </div>
     
   </div>
@@ -140,7 +140,7 @@
         capturing and sequencing contact information with one click.
       </p>
       <div class="primary-btn section1-btn">
-        <a href="" class="primary-btn-link">Get Started</a>
+        <a href="Get started.html" class="primary-btn-link">Get Started</a>
       </div>
     </div>
     <div class="section1-img">
@@ -276,7 +276,7 @@
       </h1>
       <p>Modern sales requires engagement across the entire buying team.</p>
       <div class="primary-btn">
-        <a href="" class="primary-btn-link">Get Started</a>
+        <a href="Get started.html" class="primary-btn-link">Get Started</a>
       </div>
     </div>
     <div class="section5-img">
