--- a/privacy.html
+++ b/privacy.html
@@ -23,7 +23,7 @@
     
     <div class="main-navbar">
         <div class="main-logo-box">
-            <img src="img/leadiq-logo.svg" alt="">
+            <a href="index.html" target="_blank"> <img src="img/leadiq-logo.svg" alt="" /></a>
         </div>
         <ul class="main-nav-list">
            <li> <a href="#" class="main-nav-links">Why LeadIQ <img src="icon/down arrow.png" alt="" height="13px
@@ -58,11 +58,11 @@
                         <li><a class="submenu-links"href="#">Privacy Center</a></li>
                     </ul>
                 </li>
-                        <li> <a href="#" class="main-nav-links">Pricing</a></li>
+                        <li> <a href="pricing.html" class="main-nav-links">Pricing</a></li>
                 
         </ul>
         <div class="primary-btn">
-            <a href="" class="primary-btn-link">Get Started</a>
+            <a href="Get started.html" class="primary-btn-link">Get Started</a>
         </div>
     </div>
 
