--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
   <div class="main-navbar">
     <div class="main-logo-box">
-      <a href="index.html" target="_blank"> <img src="img/leadiq-logo.svg" alt="" /></a>
+      <a href="index.html"> <img src="img/leadiq-logo.svg" alt="" /></a>
     </div>
     <ul class="main-nav-list">
       <li>
