--- a/Get started.html
+++ b/Get started.html
@@ -198,7 +198,7 @@
     
     <!-- ----------SECTION2--------- -->
 
-    <div class="section-2">
+    <div class="section-2 get-Started-section-2">
         <h2>Top sales teams have adopted the LeadIQ way</h2>
         <div>
             <div class="box">
@@ -247,7 +247,7 @@
             alt=""
           />
         </div>
-        <div class="section-9bg-2">
+        <div class="section-9bg-2 get-started-section-3">
           <img
             src="https://assets.website-files.com/60819f9be381394642b5659e/6081c4401f9db9638f7e83ed_leadiq-leader-background-1.svg"
             alt=""
