--- a/pricing.html
+++ b/pricing.html
@@ -600,6 +600,18 @@
 
   </div>
   <!-- ----------------------------before footer------------------------------------------------ -->
+  <div id="section-4-get-started">
+    <div>
+        <div>
+            <img src="https://assets.website-files.com/60819f9be381394642b5659e/609b3c0eef61360fcbd53350_leadiq-logo-crowd.svg"
+                alt="" class="logo-crowd">
+        </div>
+      
+        
+    </div>
+    <h1>Our users love us</h1>
+</div>
+
   <div id="section-5">
     <div onclick="location.href='https://www.g2.com/products/leadiq/reviews/leadiq-review-869318';" >
         <img src="https://assets.website-files.com/60819f9be381394642b5659e/609b3cdfc5cc2a5f78b761e2_leadiq-review-user.svg"
